[package]
name = "tsukuyomi-server"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi-server.git"
description = """
A general purpose HTTP server based on Hyper and tower-service.
"""

include = [
    "/src/**/*.*",
    "/tests/**/*.*",
    "/benches/**/*.*",
    "/examples/**/*.*",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
tokio = "0.1"
tokio-threadpool = "0.1"
tower-service = "0.1"

# for TLS
rustls = { version = "0.14", optional = true }
tokio-rustls = { version = "0.8", optional = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
tls = [
    "rustls",
    "tokio-rustls",
]

[workspace]
members = [
    "crates/doctest",
]
